backend/kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: web-login-demo
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: registry.internal:5000/web-login-demo_api:1.0
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  namespace: web-login-demo
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
